--- a/index.html
+++ b/index.html
@@ -64,23 +64,16 @@ td.center, th.center{text-align:center}
 .tableScroll{max-height:360px;overflow:auto}
 
 .fabWrap{
-  position:fixed;right:18px;bottom:18px;z-index:50;
-  display:flex;gap:10px;flex-direction:column;align-items:flex-end;
+  display:flex;
+  justify-content:space-between;
+  gap:10px;
+  margin-top:14px;
 }
 .historyBtn{
-  position:fixed;left:18px;bottom:18px;
   background:linear-gradient(180deg,#2d6cdf,#1f57c8);
 }
 .settingsBtn{
-  position:fixed;right:18px;bottom:18px;
-}
-
-/* Add spacing above buttons so they don't overlap content */
-@media(min-width:900px){
-  .wrap{padding-bottom:80px}
-}
-@media(max-width:900px){
-  .wrap{padding-bottom:100px}
+  background:linear-gradient(180deg,#2d6cdf,#1f57c8);
 }
 
 .modalOverlay{
@@ -105,7 +98,6 @@ td.center, th.center{text-align:center}
 
 <body>
 <div class="wrap">
-  <h1>Purrfect Budget</h1>
 
   <!-- AUTH -->
   <div id="authView" class="card hidden">
@@ -231,12 +223,14 @@ td.center, th.center{text-align:center}
         </div>
       </div>
 
+      <!-- Floating buttons -->
+      <div class="fabWrap">
+        <button id="openHistoryBtn" type="button" class="historyBtn">History</button>
+        <button id="openSettingsBtn" type="button" class="settingsBtn">Settings</button>
+      </div>
+
     </div>
   </div>
-
-  <!-- Floating buttons -->
-  <button id="openHistoryBtn" type="button" class="historyBtn">History</button>
-  <button id="openSettingsBtn" type="button" class="settingsBtn">Settings</button>
 
   <div id="globalStatus" class="status"></div>
 </div>
