--- a/index.html
+++ b/index.html
@@ -241,7 +241,6 @@ td.center, th.center{text-align:center}
       
       <div class="row">
         <button id="settingsOpenEditBudgetsBtn" class="secondary" type="button">Edit Budget Amounts</button>
-        <button id="settingsOpenReorderBtn" class="secondary" type="button">Reorder Categories</button>
       </div>
 
       <div id="settingsEditBudgetsPanel" class="subcard hidden">
@@ -254,6 +253,10 @@ td.center, th.center{text-align:center}
           <button id="settingsCancelEditBudgetsBtn" class="secondary" type="button">Cancel</button>
         </div>
         <div id="settingsEditBudgetsStatus" class="status"></div>
+      </div>
+
+      <div class="row" style="margin-top:14px;">
+        <button id="settingsOpenReorderBtn" class="secondary" type="button">Reorder Categories</button>
       </div>
 
       <div id="settingsReorderPanel" class="subcard hidden">
